k8s/monitoring/mlflow-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  labels:
    app: mlflow
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: mlflow
