k8s/monitoring/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: dog-breed-prediction
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: monitoring
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      nodePort: 30090
      protocol: TCP
